<resources>
    <string name="app_name">Expense_Tracker</string>
    <string name="auth"> Authetification </string>
    <string name="username"> Email ... </string>
    <string name="pass"> Password ...</string>
    <string name="login"> Afiseaza Lista Persoane </string>
    <string name="signup"> Sign Up </string>
    <string name="signup_user"> Sign Up User</string>
    <string name="firstName"> First Name: </string>
    <string name="firstNameHint"> Enter first name ... </string>
    <string name="lastName"> Last Name: </string>
    <string name="lastNameHint"> Enter last name ... </string>
    <string name="birthdate"> Birthdate: </string>
    <string name="Email"> Email: </string>
    <string name="emailHint">Enter email...</string>
    <string name="signupButton">Sign up</string>
    <string name="Inregistrare">Inregistrare Student</string>
    <string name="FullNume"> Numele Complet: </string>
    <string name="cnp"> CNP: </string>
    <string name="facultate"> Specializarea: </string>
    <string name="varsta"> Varsta: </string>
    <string name="ultAn"> Este ultimul an? </string>

</resources>