<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/signup_user"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="120dp"
            android:layout_height="70dp"
            android:text="@string/firstName"
            android:textSize="15sp"
            android:gravity="center"
            android:textAlignment="center"/>

       <EditText
           android:id="@+id/firstnameTxt"
           android:layout_width="match_parent"
           android:layout_height="70dp"
           android:hint="@string/firstNameHint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:text="@string/lastName"
            android:textSize="15sp"
            android:gravity="center"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/lastnameTxt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/lastNameHint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/birthdate"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:gravity="center">

        <DatePicker
            android:id = "@+id/bdayPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="0.8"
            android:scaleY="0.8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/Email"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/emailHint" />

    </LinearLayout>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupButton" />


</LinearLayout>