<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Inregistrare"
            android:layout_gravity ="center"
            android:textAlignment="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/FullNume"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/fullNameTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/FullNume"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cnp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/cnpTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/cnp"
            android:inputType="numberDecimal"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/facultate"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/specializareTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/facultate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/varsta"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/varstaTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/varsta"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/ultAn"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <RadioGroup
            android:id="@+id/radioUltAn"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioDA"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="DA"/>

            <RadioButton
                android:id="@+id/radioNu"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="NU"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/adaugareStudent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Adauga Student"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>